--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 
- server.port = 8181
+# ?? ?? ??
+server.port=8181
+
+# ?? ?? ??
+logging.level.root=INFO
+logging.level.com.example.demo.rest=DEBUG
+
+# ??? ??? ??
+spring.datasource.url=jdbc:mariadb://localhost:3306/demodb
+spring.datasource.username=root
+spring.datasource.password=89234534
