--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ logging.level.com.example.demo.rest=DEBUG
 
 # ??? ??? ??
 spring.datasource.url=jdbc:mariadb://localhost:3306/demodb
+ // mysql? ???? setting.gradle? db? mysql? ??? ??? mysql? ??. 
 spring.datasource.username=root
 spring.datasource.password=89234534
