--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/demodb
  // mysql? ???? setting.gradle? db? mysql? ??? ??? mysql? ??. 
 spring.datasource.username=root
 spring.datasource.password=89234534
+
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=3MB
+
+upload.path=C:/profile_upload
