--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.properties
+TokenProvider.java
+
 
 ### NetBeans ###
 /nbproject/private/
