--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+#TokenProvider.java
 ### STS ###
 .apt_generated
 .classpath
@@ -24,7 +24,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/java/com/example/demo/security/TokenProvider
 
 
 ### NetBeans ###
